gen/org/intellij/jflex/parser/JFlexParser.java
/*
 * Copyright 2011-2014 Gregory Shrago
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package org.intellij.jflex.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.jflex.psi.JFlexTypes.*;
import static org.intellij.jflex.parser.JFlexParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JFlexParser implements PsiParser {

  public ASTNode parse(IElementType type, PsiBuilder builder) {
    parseLight(type, builder);
    return builder.getTreeBuilt();
  }

  public void parseLight(IElementType type, PsiBuilder builder) {
    boolean result;
    builder = adapt_builder_(type, builder, this, EXTENDS_SETS_);
    Marker marker = enter_section_(builder, 0, _COLLAPSE_, null);
    if (type == FLEX_CHOICE_EXPRESSION) {
      result = expression(builder, 0, -1);
    }
    else if (type == FLEX_CLASS_EXPRESSION) {
      result = class_expression(builder, 0);
    }
    else if (type == FLEX_DECLARATIONS_SECTION) {
      result = declarations_section(builder, 0);
    }
    else if (type == FLEX_EXPRESSION) {
      result = expression(builder, 0, -1);
    }
    else if (type == FLEX_JAVA_CODE) {
      result = java_code(builder, 0);
    }
    else if (type == FLEX_JAVA_FQN) {
      result = java_fqn(builder, 0);
    }
    else if (type == FLEX_LEXICAL_RULES_SECTION) {
      result = lexical_rules_section(builder, 0);
    }
    else if (type == FLEX_LITERAL_EXPRESSION) {
      result = literal_expression(builder, 0);
    }
    else if (type == FLEX_LOOK_AHEAD) {
      result = look_ahead(builder, 0);
    }
    else if (type == FLEX_MACRO_DEFINITION) {
      result = macro_definition(builder, 0);
    }
    else if (type == FLEX_MACRO_REF_EXPRESSION) {
      result = macro_ref_expression(builder, 0);
    }
    else if (type == FLEX_MACRO_REFERENCE) {
      result = macro_reference(builder, 0);
    }
    else if (type == FLEX_NOT_EXPRESSION) {
      result = not_expression(builder, 0);
    }
    else if (type == FLEX_OPTION) {
      result = option(builder, 0);
    }
    else if (type == FLEX_PAREN_EXPRESSION) {
      result = paren_expression(builder, 0);
    }
    else if (type == FLEX_PREDEFINED_CLASS_EXPRESSION) {
      result = predefined_class_expression(builder, 0);
    }
    else if (type == FLEX_QUANTIFIER_EXPRESSION) {
      result = expression(builder, 0, 3);
    }
    else if (type == FLEX_RULE) {
      result = rule(builder, 0);
    }
    else if (type == FLEX_SEQUENCE_EXPRESSION) {
      result = expression(builder, 0, 0);
    }
    else if (type == FLEX_STATE_DECLARATION) {
      result = state_declaration(builder, 0);
    }
    else if (type == FLEX_STATE_DEFINITION) {
      result = state_definition(builder, 0);
    }
    else if (type == FLEX_STATE_REFERENCE) {
      result = state_reference(builder, 0);
    }
    else if (type == FLEX_USER_CODE_SECTION) {
      result = user_code_section(builder, 0);
    }
    else {
      result = parse_root_(type, builder, 0);
    }
    exit_section_(builder, 0, marker, type, result, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType type, PsiBuilder builder, int level) {
    return flex_file(builder, level + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(FLEX_CHOICE_EXPRESSION, FLEX_CLASS_EXPRESSION, FLEX_EXPRESSION, FLEX_LITERAL_EXPRESSION,
      FLEX_MACRO_REF_EXPRESSION, FLEX_NOT_EXPRESSION, FLEX_PAREN_EXPRESSION, FLEX_PREDEFINED_CLASS_EXPRESSION,
      FLEX_QUANTIFIER_EXPRESSION, FLEX_SEQUENCE_EXPRESSION),
  };

  /* ********************************************************** */
  // '{' java_class_statements '}' | '|'
  public static boolean action(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "action")) return false;
    if (!nextTokenIs(builder, "<action>", FLEX_BRACE1, FLEX_OR)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, "<action>");
    result = action_0(builder, level + 1);
    if (!result) result = consumeToken(builder, FLEX_OR);
    exit_section_(builder, level, marker, FLEX_JAVA_CODE, result, false, null);
    return result;
  }

  // '{' java_class_statements '}'
  private static boolean action_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "action_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = consumeToken(builder, FLEX_BRACE1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, java_class_statements(builder, level + 1));
    result = pinned && consumeToken(builder, FLEX_BRACE2) && result;
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // escaped_char | char | number | '-' | '=' | '<' | '>' | ','
  //   | ']'
  static boolean allowed_chars(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "allowed_chars")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_ESCAPED_CHAR);
    if (!result) result = consumeToken(builder, FLEX_CHAR);
    if (!result) result = consumeToken(builder, FLEX_NUMBER);
    if (!result) result = consumeToken(builder, FLEX_DASH);
    if (!result) result = consumeToken(builder, FLEX_EQ);
    if (!result) result = consumeToken(builder, FLEX_ANGLE1);
    if (!result) result = consumeToken(builder, FLEX_ANGLE2);
    if (!result) result = consumeToken(builder, FLEX_COMMA);
    if (!result) result = consumeToken(builder, FLEX_BRACK2);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // char | escaped_char
  static boolean class_char(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_char")) return false;
    if (!nextTokenIs(builder, "", FLEX_CHAR, FLEX_ESCAPED_CHAR)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_CHAR);
    if (!result) result = consumeToken(builder, FLEX_ESCAPED_CHAR);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // macro_definition | state_declaration | option
  static boolean declaration(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = macro_definition(builder, level + 1);
    if (!result) result = state_declaration(builder, level + 1);
    if (!result) result = option(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, declaration_recover_parser_);
    return result;
  }

  /* ********************************************************** */
  // !(<<is_percent>> | id '=') section_recover
  static boolean declaration_recover(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = declaration_recover_0(builder, level + 1);
    result = result && section_recover(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // !(<<is_percent>> | id '=')
  private static boolean declaration_recover_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_, null);
    result = !declaration_recover_0_0(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }

  // <<is_percent>> | id '='
  private static boolean declaration_recover_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = is_percent(builder, level + 1);
    if (!result) result = declaration_recover_0_0_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // id '='
  private static boolean declaration_recover_0_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declaration_recover_0_0_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_ID);
    result = result && consumeToken(builder, FLEX_EQ);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // [] (declaration) *
  public static boolean declarations_section(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, "<declarations section>");
    result = declarations_section_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && declarations_section_1(builder, level + 1);
    exit_section_(builder, level, marker, FLEX_DECLARATIONS_SECTION, result, pinned, section_recover_parser_);
    return result || pinned;
  }

  // []
  private static boolean declarations_section_0(PsiBuilder builder, int level) {
    return true;
  }

  // (declaration) *
  private static boolean declarations_section_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_1")) return false;
    int pos = current_position_(builder);
    while (true) {
      if (!declarations_section_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "declarations_section_1", pos)) break;
      pos = current_position_(builder);
    }
    return true;
  }

  // (declaration)
  private static boolean declarations_section_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "declarations_section_1_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = declaration(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // []
  //   user_code_section
  //   section_div
  //   declarations_section
  //   section_div
  //   lexical_rules_section
  static boolean flex_file(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "flex_file")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = flex_file_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && report_error_(builder, user_code_section(builder, level + 1));
    result = pinned && report_error_(builder, section_div(builder, level + 1)) && result;
    result = pinned && report_error_(builder, declarations_section(builder, level + 1)) && result;
    result = pinned && report_error_(builder, section_div(builder, level + 1)) && result;
    result = pinned && lexical_rules_section(builder, level + 1) && result;
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  // []
  private static boolean flex_file_0(PsiBuilder builder, int level) {
    return true;
  }

  /* ********************************************************** */
  // <<anything !('}' | '<' id '>')>>
  static boolean java_class_statements(PsiBuilder builder, int level) {
    return anything(builder, level + 1, java_class_statements_0_0_parser_);
  }

  // !('}' | '<' id '>')
  private static boolean java_class_statements_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_class_statements_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_, null);
    result = !java_class_statements_0_0_0(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }

  // '}' | '<' id '>'
  private static boolean java_class_statements_0_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_class_statements_0_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_BRACE2);
    if (!result) result = java_class_statements_0_0_0_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // '<' id '>'
  private static boolean java_class_statements_0_0_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_class_statements_0_0_0_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_ANGLE1);
    result = result && consumeToken(builder, FLEX_ID);
    result = result && consumeToken(builder, FLEX_ANGLE2);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // <<anything2 (&java | !<<is_percent>>)>>
  public static boolean java_code(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_code")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _COLLAPSE_, "<java code>");
    result = anything2(builder, level + 1, java_code_0_0_parser_);
    exit_section_(builder, level, marker, FLEX_JAVA_CODE, result, false, null);
    return result;
  }

  // &java | !<<is_percent>>
  private static boolean java_code_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_code_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = java_code_0_0_0(builder, level + 1);
    if (!result) result = java_code_0_0_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // &java
  private static boolean java_code_0_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_code_0_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _AND_, null);
    result = consumeToken(builder, FLEX_JAVA);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }

  // !<<is_percent>>
  private static boolean java_code_0_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_code_0_0_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_, null);
    result = !is_percent(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // id ( safe_dot id ) *
  public static boolean java_fqn(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn")) return false;
    if (!nextTokenIs(builder, FLEX_ID)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = consumeToken(builder, FLEX_ID);
    pinned = result; // pin = 1
    result = result && java_fqn_1(builder, level + 1);
    exit_section_(builder, level, marker, FLEX_JAVA_FQN, result, pinned, null);
    return result || pinned;
  }

  // ( safe_dot id ) *
  private static boolean java_fqn_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_1")) return false;
    int pos = current_position_(builder);
    while (true) {
      if (!java_fqn_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "java_fqn_1", pos)) break;
      pos = current_position_(builder);
    }
    return true;
  }

  // safe_dot id
  private static boolean java_fqn_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_1_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = safe_dot(builder, level + 1);
    pinned = result; // pin = 1
    result = result && consumeToken(builder, FLEX_ID);
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // [java_fqn (',' java_fqn) *]
  static boolean java_fqn_list(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_list")) return false;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    java_fqn_list_0(builder, level + 1);
    exit_section_(builder, level, marker, null, true, false, declaration_recover_parser_);
    return true;
  }

  // java_fqn (',' java_fqn) *
  private static boolean java_fqn_list_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_list_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = java_fqn(builder, level + 1);
    pinned = result; // pin = 1
    result = result && java_fqn_list_0_1(builder, level + 1);
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  // (',' java_fqn) *
  private static boolean java_fqn_list_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_list_0_1")) return false;
    int pos = current_position_(builder);
    while (true) {
      if (!java_fqn_list_0_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "java_fqn_list_0_1", pos)) break;
      pos = current_position_(builder);
    }
    return true;
  }

  // ',' java_fqn
  private static boolean java_fqn_list_0_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "java_fqn_list_0_1_0")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = consumeToken(builder, FLEX_COMMA);
    pinned = result; // pin = 1
    result = result && java_fqn(builder, level + 1);
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // [] rule +
  public static boolean lexical_rules_section(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "lexical_rules_section")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, "<lexical rules section>");
    result = lexical_rules_section_0(builder, level + 1);
    pinned = result; // pin = 1
    result = result && lexical_rules_section_1(builder, level + 1);
    exit_section_(builder, level, marker, FLEX_LEXICAL_RULES_SECTION, result, pinned, section_recover_parser_);
    return result || pinned;
  }

  // []
  private static boolean lexical_rules_section_0(PsiBuilder builder, int level) {
    return true;
  }

  // rule +
  private static boolean lexical_rules_section_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "lexical_rules_section_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = rule(builder, level + 1);
    int pos = current_position_(builder);
    while (result) {
      if (!rule(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "lexical_rules_section_1", pos)) break;
      pos = current_position_(builder);
    }
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // new_line <<p>> new_line
  static boolean line(PsiBuilder builder, int level, final Parser aP) {
    if (!recursion_guard_(builder, level, "line")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, null);
    result = new_line(builder, level + 1);
    result = result && aP.parse(builder, level);
    pinned = result; // pin = 2
    result = result && new_line(builder, level + 1);
    exit_section_(builder, level, marker, null, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // '$' | '/' expression
  public static boolean look_ahead(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "look_ahead")) return false;
    if (!nextTokenIs(builder, "<look ahead>", FLEX_DOLLAR, FLEX_SLASH2)) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, "<look ahead>");
    result = consumeToken(builder, FLEX_DOLLAR);
    if (!result) result = look_ahead_1(builder, level + 1);
    exit_section_(builder, level, marker, FLEX_LOOK_AHEAD, result, false, null);
    return result;
  }

  // '/' expression
  private static boolean look_ahead_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "look_ahead_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_SLASH2);
    result = result && expression(builder, level + 1, -1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // new_line id '=' expression
  public static boolean macro_definition(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, "<macro definition>");
    result = new_line(builder, level + 1);
    result = result && consumeToken(builder, FLEX_ID);
    result = result && consumeToken(builder, FLEX_EQ);
    pinned = result; // pin = 3
    result = result && expression(builder, level + 1, -1);
    exit_section_(builder, level, marker, FLEX_MACRO_DEFINITION, result, pinned, macro_definition_recover_parser_);
    return result || pinned;
  }

  /* ********************************************************** */
  // !(new_line id '=' | '%%' | <<is_percent>>)
  static boolean macro_definition_recover(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_, null);
    result = !macro_definition_recover_0(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }

  // new_line id '=' | '%%' | <<is_percent>>
  private static boolean macro_definition_recover_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = macro_definition_recover_0_0(builder, level + 1);
    if (!result) result = consumeToken(builder, FLEX_PERC2);
    if (!result) result = is_percent(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // new_line id '='
  private static boolean macro_definition_recover_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_definition_recover_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = new_line(builder, level + 1);
    result = result && consumeToken(builder, FLEX_ID);
    result = result && consumeToken(builder, FLEX_EQ);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // id
  public static boolean macro_reference(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "macro_reference")) return false;
    if (!nextTokenIs(builder, FLEX_ID)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, FLEX_ID);
    exit_section_(builder, marker, FLEX_MACRO_REFERENCE, result);
    return result;
  }

  /* ********************************************************** */
  // &<<is_new_line>>
  static boolean new_line(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "new_line")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _AND_, null);
    result = is_new_line(builder, level + 1);
    exit_section_(builder, level, marker, null, result, false, null);
    return result;
  }
